--- a/src/main/resources/fxml/Materiales/Producto/ProductoBotones.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/ProductoBotones.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.BotonesAccionesController">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
       <Button layoutX="37.0" layoutY="37.0" mnemonicParsing="false" text="Nuevo" />
       <Button layoutX="179.0" layoutY="37.0" mnemonicParsing="false" text="Desactivar" />
