--- a/src/main/resources/fxml/Materiales/Producto/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/Producto.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -24,7 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
+<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
     <children>
         <AnchorPane prefHeight="575.0" prefWidth="1000.0">
            <children>
@@ -122,31 +116,25 @@
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                   <children>
-                                     <Label layoutX="24.0" layoutY="50.0" text="Almacén">
+                                     <Label layoutX="31.0" layoutY="26.0" text="Racks">
                                         <font>
-                                           <Font size="14.0" />
+                                           <Font size="20.0" />
                                         </font>
                                      </Label>
-                                     <Label layoutX="24.0" layoutY="91.0" text="Racks">
-                                        <font>
-                                           <Font size="14.0" />
-                                        </font>
-                                     </Label>
-                                     <ComboBox layoutX="197.0" layoutY="48.0" prefHeight="20.0" prefWidth="457.0" />
-                                     <TableView layoutX="24.0" layoutY="142.0" prefHeight="289.0" prefWidth="423.0">
+                                     <TableView layoutX="31.0" layoutY="94.0" prefHeight="289.0" prefWidth="423.0">
                                        <columns>
                                          <TableColumn prefWidth="151.0" text="Código de Rack" />
                                          <TableColumn prefWidth="271.0" text="Cantidad disponible" />
                                        </columns>
                                      </TableView>
-                                     <TitledPane animated="false" collapsible="false" layoutX="503.0" layoutY="142.0" prefHeight="273.0" prefWidth="177.0" text="Acciones">
+                                     <TitledPane animated="false" collapsible="false" layoutX="517.0" layoutY="94.0" prefHeight="289.0" prefWidth="177.0" text="Acciones">
                                         <content>
                                            <AnchorPane prefHeight="239.0" prefWidth="175.0">
                                               <children>
-                                                 <Button layoutX="68.0" layoutY="41.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="41.0" />
-                                                 <Button layoutX="68.0" layoutY="122.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
-                                                 <Label layoutX="72.0" layoutY="93.0" text="Ingresar" />
-                                                 <Label layoutX="66.0" layoutY="164.0" text="Movimiento" />
+                                                 <Button layoutX="68.0" layoutY="47.0" mnemonicParsing="false" onAction="#abrirIngresarProductoARack" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="47.0" />
+                                                 <Button layoutX="68.0" layoutY="161.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                                                 <Label layoutX="67.0" layoutY="115.0" text="Ingresar" />
+                                                 <Label layoutX="61.0" layoutY="220.0" text="Movimiento" />
                                               </children>
                                            </AnchorPane>
                                         </content>
