--- a/src/main/resources/fxml/Materiales/Producto/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/Producto.fxml
@@ -147,117 +147,113 @@
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                   <children>
-                                     <Pane layoutX="14.0" layoutY="37.0" prefHeight="166.0" prefWidth="700.0" style="-fx-border-color: black;">
-                                        <children>
-                                           <Label layoutX="14.0" layoutY="14.0" text="Características">
-                                              <font>
-                                                 <Font size="20.0" />
-                                              </font>
-                                           </Label>
-                                           <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                                           <Label layoutX="21.0" layoutY="68.0" text="Largo">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="443.0" layoutY="73.0" text="Peso">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="152.0" layoutY="68.0" text="Alto">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="21.0" layoutY="111.0" text="Unidades">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="254.0" layoutY="68.0" text="Ancho">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="443.0" layoutY="112.0" text="Unidades">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <TextField layoutX="90.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
-                                           <TextField layoutX="188.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
-                                           <TextField layoutX="303.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
-                                           <ComboBox layoutX="90.0" layoutY="109.0" prefWidth="150.0" />
-                                           <TextField layoutX="526.0" layoutY="66.0" prefHeight="25.0" prefWidth="53.0" />
-                                           <ComboBox layoutX="526.0" layoutY="109.0" prefWidth="150.0" />
-                                        </children>
-                                     </Pane>
-                                     <Pane layoutX="14.0" layoutY="218.0" prefHeight="250.0" prefWidth="700.0" style="-fx-border-color: black;">
-                                        <children>
-                                           <Label layoutX="14.0" layoutY="14.0" text="Inventario">
-                                              <font>
-                                                 <Font size="20.0" />
-                                              </font>
-                                           </Label>
-                                           <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                                           <Label layoutX="22.0" layoutY="61.0" text="Ubicacion en almacen">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="125.0" layoutY="119.0" text="Separados">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="125.0" layoutY="148.0" text="No disponibles">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="124.0" layoutY="176.0" text="Envio directo">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="393.0" layoutY="91.0" text="En orden">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="393.0" layoutY="119.0" text="Comprometidos">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="124.0" layoutY="207.0" text="Disponible para la venta">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="393.0" layoutY="207.0" text="Disponible para escoger">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="124.0" layoutY="91.0" text="Cantidad en almacen">
-                                              <font>
-                                                 <Font size="14.0" />
-                                              </font>
-                                           </Label>
-                                           <Label layoutX="301.0" layoutY="90.0" text="0" />
-                                           <Label layoutX="301.0" layoutY="121.0" text="0" />
-                                           <Label layoutX="301.0" layoutY="150.0" text="0" />
-                                           <Label layoutX="301.0" layoutY="178.0" text="0" />
-                                           <Label layoutX="301.0" layoutY="209.0" text="0" />
-                                           <Label layoutX="559.0" layoutY="93.0" text="0" />
-                                           <Label layoutX="559.0" layoutY="121.0" text="0" />
-                                           <Label layoutX="559.0" layoutY="209.0" text="0" />
-                                           <Line endX="100.0" layoutX="218.0" layoutY="202.0" startX="-100.0" />
-                                           <Line endX="100.0" layoutX="487.0" layoutY="202.0" startX="-100.0" />
-                                        </children>
-                                     </Pane>
+                                    <TitledPane animated="false" layoutX="14.0" layoutY="27.0" prefHeight="143.0" prefWidth="701.0" text="Características">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="111.0" prefWidth="699.0">
+                                             <children>
+                                                 <Label layoutX="22.0" layoutY="27.0" text="Largo">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="444.0" layoutY="32.0" text="Peso">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="153.0" layoutY="27.0" text="Alto">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="22.0" layoutY="70.0" text="Unidades">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="255.0" layoutY="27.0" text="Ancho">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="444.0" layoutY="71.0" text="Unidades">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <TextField layoutX="91.0" layoutY="25.0" prefHeight="25.0" prefWidth="53.0" />
+                                                 <TextField layoutX="189.0" layoutY="25.0" prefHeight="25.0" prefWidth="53.0" />
+                                                 <TextField layoutX="304.0" layoutY="25.0" prefHeight="25.0" prefWidth="53.0" />
+                                                 <ComboBox layoutX="91.0" layoutY="68.0" prefWidth="150.0" />
+                                                 <TextField layoutX="527.0" layoutY="25.0" prefHeight="25.0" prefWidth="53.0" />
+                                                 <ComboBox layoutX="527.0" layoutY="68.0" prefWidth="150.0" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </TitledPane>
+                                    <TitledPane animated="false" layoutX="14.0" layoutY="191.0" prefHeight="264.0" prefWidth="701.0" text="Inventario">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="238.0" prefWidth="657.0">
+                                             <children>
+                                                 <Label layoutX="23.0" layoutY="23.0" text="Ubicacion en almacen">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="126.0" layoutY="81.0" text="Separados">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="126.0" layoutY="110.0" text="No disponibles">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="125.0" layoutY="138.0" text="Envio directo">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="394.0" layoutY="53.0" text="En orden">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="394.0" layoutY="81.0" text="Comprometidos">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="125.0" layoutY="169.0" text="Disponible para la venta">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="394.0" layoutY="169.0" text="Disponible para escoger">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="125.0" layoutY="53.0" text="Cantidad en almacen">
+                                                    <font>
+                                                       <Font size="14.0" />
+                                                    </font>
+                                                 </Label>
+                                                 <Label layoutX="302.0" layoutY="52.0" text="0" />
+                                                 <Label layoutX="302.0" layoutY="83.0" text="0" />
+                                                 <Label layoutX="302.0" layoutY="112.0" text="0" />
+                                                 <Label layoutX="302.0" layoutY="140.0" text="0" />
+                                                 <Label layoutX="302.0" layoutY="171.0" text="0" />
+                                                 <Label layoutX="560.0" layoutY="55.0" text="0" />
+                                                 <Label layoutX="560.0" layoutY="83.0" text="0" />
+                                                 <Label layoutX="560.0" layoutY="171.0" text="0" />
+                                                 <Line endX="100.0" layoutX="218.0" layoutY="165.0" startX="-100.0" />
+                                                 <Line endX="100.0" layoutX="480.0" layoutY="164.0" startX="-100.0" />
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </TitledPane>
                                   </children>
                               </AnchorPane>
                             </content>
