--- a/src/main/resources/fxml/Materiales/Rack/RackBotones.fxml
+++ b/src/main/resources/fxml/Materiales/Rack/RackBotones.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
       <AnchorPane id="AnchorPane" layoutX="1.0" prefHeight="100.0" prefWidth="300.0">
          <children>
