--- a/src/main/resources/fxml/ContenidoPrincipal.fxml
+++ b/src/main/resources/fxml/ContenidoPrincipal.fxml
@@ -43,6 +43,74 @@
                   <AnchorPane prefHeight="200.0" prefWidth="900.0">
                      <children>
                         <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
+                        <Button layoutX="29.0" layoutY="10.0" mnemonicParsing="false">
+                           <graphic>
+                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
+                                       <image>
+                                          <Image url="@Imagenes/email_icon.png" />
+                                       </image>
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" />
+                                       </VBox.margin>
+                                    </ImageView>
+                                    <Label text="Correo" />
+                                 </children>
+                              </VBox>
+                           </graphic>
+                        </Button>
+                        <Button layoutX="133.0" layoutY="9.0" mnemonicParsing="false">
+                           <graphic>
+                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
+                                       <image>
+                                          <Image url="@Imagenes/print_icon.png" />
+                                       </image>
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" />
+                                       </VBox.margin>
+                                    </ImageView>
+                                    <Label text="Imprimir" />
+                                 </children>
+                              </VBox>
+                           </graphic>
+                        </Button>
+                        <Button layoutX="238.0" layoutY="9.0" mnemonicParsing="false">
+                           <graphic>
+                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
+                                       <image>
+                                          <Image url="@Imagenes/reload_icon.png" />
+                                       </image>
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" />
+                                       </VBox.margin>
+                                    </ImageView>
+                                    <Label text="Recargar" />
+                                 </children>
+                              </VBox>
+                           </graphic>
+                        </Button>
+                        <Button layoutX="344.0" layoutY="9.0" mnemonicParsing="false">
+                           <graphic>
+                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                                 <children>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
+                                       <image>
+                                          <Image url="@Imagenes/help_icon.png" />
+                                       </image>
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" />
+                                       </VBox.margin>
+                                    </ImageView>
+                                    <Label text="Ayuda" />
+                                 </children>
+                              </VBox>
+                           </graphic>
+                        </Button>
                      </children>
                   </AnchorPane>
                </children>
