--- a/src/main/resources/fxml/Materiales/Almacenes/AlmacenesBotones.fxml
+++ b/src/main/resources/fxml/Materiales/Almacenes/AlmacenesBotones.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
     
 </AnchorPane>
