--- a/src/main/resources/fxml/NavegacionLateral.fxml
+++ b/src/main/resources/fxml/NavegacionLateral.fxml
@@ -53,7 +53,7 @@
                         <Button layoutX="75.0" layoutY="168.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Pedidos" />
                         <Button layoutX="66.0" layoutY="233.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Proveedores" />
                         <Button layoutX="65.0" layoutY="289.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Promociones" />
-                        <Button layoutX="50.0" layoutY="349.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="DocumentosVenta" />
+                        <Button layoutX="41.0" layoutY="349.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Documentos de Venta" />
                      </children>
                   </AnchorPane>
                </content>
